fixed a bug that removed all media queries and made them normal CSS styling for all screen sizes. Tried to fix the hover effect on mobile screens

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*  TODO: TOP LEVEL STYLING */
-
 html {
     scroll-behavior: smooth;
    }
@@ -360,7 +358,6 @@ li{
     border-left: 1px solid black;
     border-bottom: 1px solid black;
 }
-
 #jsSkillLevel{
     width: 24%;
     height: 4.5vh;
@@ -373,7 +370,6 @@ li{
     justify-content: center;
     align-items: center;
 }
-
 #htmlSkillBar{
     width: 64%;
     height: 4.5vh;
@@ -383,7 +379,6 @@ li{
     border-left: 1px solid black;
     border-bottom: 1px solid black;
 }
-
 #htmlSkillLevel{
     width: 16%;
     height: 4.5vh;
@@ -396,7 +391,6 @@ li{
     justify-content: center;
     align-items: center;
 }
-
 #cssSkillBar{
     width: 64%;
     height: 4.5vh;
@@ -406,7 +400,6 @@ li{
     border-left: 1px solid black;
     border-bottom: 1px solid black;
 }
-
 #cssSkillLevel{
     width: 16%;
     height: 4.5vh;
@@ -419,7 +412,6 @@ li{
     justify-content: center;
     align-items: center;
 }
-
 #reactSkillBar{
     width: 48%;
     height: 4.5vh;
@@ -429,7 +421,6 @@ li{
     border-left: 1px solid black;
     border-bottom: 1px solid black;
 }
-
 #reactSkillLevel{
     width: 32%;
     height: 4.5vh;
@@ -442,7 +433,6 @@ li{
     justify-content: center;
     align-items: center;
 }
-
 #nodeSkillBar{
     width: 40%;
     height: 4.5vh;
@@ -452,7 +442,6 @@ li{
     border-left: 1px solid black;
     border-bottom: 1px solid black;
 }
-
 #nodeSkillLevel{
     width: 40%;
     height: 4.5vh;
@@ -1078,6 +1067,13 @@ li{
    
 }
 
+@media (hover: none){
+    .navButton:hover{
+        background-color: inherit;
+        color: inherit ;
+    }
+}
+
 @media only screen and (max-width: 768px) {
 
     .resume{
@@ -1180,23 +1176,21 @@ li{
         transition: 0.2s;
         padding: 1vh;
         /* border-radius: 20%; */
-    } */
+
 
     
 
     /* .resume{
      display: none;
     }
-
     #ghIcon{
      display: none;
      }
-
      #linkedInIcon{
         display: none;
      } */
 
-     #leftAbout{
+    #leftAbout{
         float: none;
         width: 90%;
         margin-left: 5%;
@@ -1525,5 +1519,4 @@ li{
         left: 0%;
         font-size: small;
     }
-    
-  
+}
